fix: lunatic question numbering (#1023)
* fix: lunatic question numbering

* test: update tests

* chore: bump version